<resources>
    <string name="app_name">RT Toolbox</string>
    <string name="emergency">EMERGENCY</string>
    <string name="tools">TOOLS</string>
    <string name="todo">TODO</string>
    <string name="exposure_calculator">EXPOSURE CALCULATOR</string>
    <string name="safety_distances">SAFETY DISTANCES</string>
    <string name="emergency_checklist">EMERGENCY CHECKLIST</string>
    <string name="stop_work">STOP WORK</string>
    <string name="analyse_situation">ANALYSE SITUATION</string>
    <string name="check_barriers">CHECK BARRIERS</string>
    <string name="call_rso">CALL RSO</string>
    <string name="monitor_barriers">MONITOR BARRIERS</string>
    <string name="send_location">SEND LOCATION</string>
    <string name="chooser_title">Send location with:</string>
    <string name="safe_distance_title">SAFETY DISTANCE CALCULATOR</string>
    <string name="input_activity">ACTIVITY: </string>
    <string name="collimated">Collimated </string>
    <string name="uncollimated">Uncollimated </string>
    <string name="activity_in_ci">Source Activity =</string>
    <string name="media_exp">Film Factor =</string>
    <string name="hvl">HVL =</string>
    <string name="textview">TextView =</string>
    <string name="thickness">Thickness =</string>
    <string name="sfd">SFD =</string>
    <string name="exposure_time">Exposure Time =</string>
    <string name="activity_unit">Activity Unit -- Ci</string>
    <string name="calculate">Calculate</string>
    <string name="units_of_measure">Units of measure -- mm</string>
    <string name="gbq">GBq</string>
    <string name="_ci">Ci</string>
    <string name="in">in</string>
    <string name="mm">mm</string>
    <string name="source_type">SOURCE TYPE</string>
    <string name="ir192">Ir192</string>
    <string name="co60">Co60</string>
    <string name="se75">Se75</string>
    <string name="title_tools">TOOLS</string>
    <string name="title_safe_dist">SAFE DISTANCE CALCULATOR</string>
    <string name="title_exp_calc">EXPOSURE CALCULATOR</string>
    <string name="target_dose_rate">TARGET DOSE RATE</string>
    <string name="mr_h">mR/h</string>
    <string name="mg_h">\u00B5Gy/h</string>
    <string name="isotope_used">Isotope Used:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_radiation_units">Radiation Units</string>
    <string name="pref_description_radiation_unit">Default is mR/h. Slide for \u00B5Gy/h.
    </string>
    <string name="pref_title_RSO_number">RSO phone and text number</string>
    <string name="pref_default_RSO_number">6136619204</string>
    <string name="pref_title_isotope_list">Isotope selection.</string>
    <string-array name="pref_isotope_list_titles">
        <item>Ir192</item>
        <item>Co60</item>
        <item>Se75</item>

    </string-array>
    <string-array name="pref_isotope_list_values">
        <item>Ir192</item>
        <item>Co60</item>
        <item>Se75</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="nps_size_display">NPS  </string>
    <string name="dn_size_display">DN </string>
    <string name="od">OD:</string>
    <string-array name="nps_pipe_sizes_spinner_select">
        <item>3/8 in / DN 10</item>
        <item>&#188; in / DN 15</item>
        <item>&#190; in / DN 20</item>
        <item>1 in / DN 25</item>
        <item>&#188; in / DN 32</item>
        <item>&#189; in / DN 40</item>
        <item>2 in / DN 50</item>
        <item>2 &#189; in / DN 65</item>
        <item>3 &#189; in / DN 90</item>
        <item>4 in / DN 100</item>
        <item>4 &#189; in / DN 115</item>
        <item>5 in / DN 125</item>
        <item>6 in / DN 150</item>
        <item>8 in / DN 200</item>
        <item>10 in / DN 250</item>
        <item>12 in / DN 300</item>
        <item>14 in / DN 350</item>
        <item>16 in / DN 400</item>
        <item>18 in / DN 450</item>
        <item>20 in / DN 500</item>
        <item>22 in / DN 550</item>
        <item>24 in / DN 600</item>
    </string-array>
    <string-array name="pipe_schedules_upto_3_point_5">
        <item>5s</item>
        <item>10s / 20</item>
        <item>30</item>
        <item>40s / 40 / STD</item>
        <item>80s / 80 / XS</item>
        <item>120</item>
        <item>160</item>
        <item>XXS</item>
    </string-array>
    <string-array name="pipe_schedules_4_to_9">
        <item>5s</item>
        <item>10s / 10</item>
        <item>20</item>
        <item>30</item>
        <item>40s / 40 / STD</item>
        <item>60</item>
        <item>80s / 80 / XS</item>
        <item>100</item>
        <item>120</item>
        <item>140</item>
        <item>160</item>
        <item>XXS</item>
    </string-array>
    <string-array name="pipe_schedules_10to24">
        <item>5s</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>STD / 40s</item>
        <item>40</item>
        <item>60</item>
        <item>80s / XS</item>
        <item>80</item>
        <item>100</item>
        <item>120</item>
        <item>140</item>
        <item>160</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Back_out_message">Back out and try again after granting permissions.</string>
    <string name="indoors_warning">Unable to acquire accurate position. Are you indoors? Are location services ON? Close the app and try again.</string>
    <string name="lat">Latitude :</string>
    <string name="longi">,  Longitude :</string>
    <string name="emerg_loc">We have a radiography emergency at: :</string>
    <string name="measurement_summary">Default is metric (SI), slide for Imperial.</string>
    <string name="units_of_measurement_title">Units of distance measurement.</string>
    <string name="source_activity_units">Source Activity Units</string>
    <string name="source_unit_summary">Default is Ci. Slide for GBq.</string>
    <string name="pipe_schedules">Pipe Thickness</string>
    <string name="NPS_pipe_size">NPS and DN Pipe Size - Choose this first!</string>
    <string name="pipe_schedule">Schedule</string>
    <string name="wall_thickness">Wall Thickness</string>
    <string name="title_activity_pipe_dimentions">PipeDimentions</string>
</resources>