<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="radiation_unit_switch"
        android:summary="@string/pref_description_radiation_unit"
        android:textIsSelectable="true"
        android:textOff="MR/Hr"
        android:textOn="GBq"
        android:title="@string/pref_title_radiation_units" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="source_unit_switch"
        android:summary="@string/source_unit_summary"
        android:textIsSelectable="true"
        android:title="@string/source_activity_units" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="measurement_unit_switch"
        android:summary="@string/measurement_summary"
        android:title="@string/units_of_measurement_title" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference

        android:defaultValue="@string/pref_default_RSO_number"
        android:inputType="phone"
        android:key="rsonumber"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_RSO_number" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_isotope_list_titles"
        android:entryValues="@array/pref_isotope_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_isotope_list" />

</PreferenceScreen>
