<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exposureCalc">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/activity_in_ci"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/activityEntry"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="10"
        app:layout_constraintBaseline_toBaselineOf="@id/textView1"
        app:layout_constraintStart_toEndOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/media_exp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"/>

    <EditText
        android:id="@+id/mediaExpEntry"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="3"
        app:layout_constraintBaseline_toBaselineOf="@id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/hvl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"/>

    <EditText
        android:id="@+id/hvlEntry"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="12.7"
        app:layout_constraintBaseline_toBaselineOf="@id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/thickness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"/>

    <EditText
        android:id="@+id/thicknessEntry"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="25"
        app:layout_constraintBaseline_toBaselineOf="@id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/sfd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5"/>

    <EditText
        android:id="@+id/sfdEntry"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="120"
        app:layout_constraintBaseline_toBaselineOf="@id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/exposure_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button5"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/calculate"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <TextView
        android:id="@+id/actUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_ci"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@id/activityEntry"
        app:layout_constraintStart_toEndOf="@+id/activityEntry" />

    <TextView
        android:id="@+id/measUnit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mm"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@id/hvlEntry"
        app:layout_constraintStart_toEndOf="@+id/hvlEntry" />

    <TextView
        android:id="@+id/measUnit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mm"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@id/thicknessEntry"
        app:layout_constraintStart_toEndOf="@+id/thicknessEntry" />

    <TextView
        android:id="@+id/measUnit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mm"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@id/sfdEntry"
        app:layout_constraintStart_toEndOf="@+id/sfdEntry" />

    <TextView
        android:id="@+id/resultTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="gotosettings"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences" />


</android.support.constraint.ConstraintLayout>