<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/EMER"
        android:layout_width="226dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:onClick="goToEmerg"
        android:text="@string/emergency"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/Toool"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="230dp"
        android:layout_height="63dp"
        android:layout_marginTop="28dp"
        android:onClick="goToToools"
        android:text="@string/tools"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EMER" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="341dp"
        android:layout_height="287dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/radsign"
        android:contentDescription="@string/todo" />

</android.support.constraint.ConstraintLayout>